// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Segmented > Segmented baseVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-2de7982e=""
>
  <div
    class="example-segmented"
    data-v-2de7982e=""
  >
    <div
      class="t-segmented"
      data-v-2de7982e=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              选项一
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              选项二
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              选项三
            </text>
          </div>
        </div>
        
      </div>
    </div>
  </div>
  <div
    class="example-segmented"
    data-v-2de7982e=""
  >
    <div
      class="t-segmented"
      data-v-2de7982e=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <text
              class="t-segmented__item-label"
            >
              home
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="app"
                >
                  <g
                    id="fill1"
                  >
                    <path
                      d="M3 3H10V10H3V3Z"
                      fill="transparent"
                    />
                    <path
                      d="M14 14H21V21H14V14Z"
                      fill="transparent"
                    />
                    <path
                      d="M3 14H10V21H3V14Z"
                      fill="transparent"
                    />
                  </g>
                  <path
                    d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M3 3H10V10H3V3Z"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                    <path
                      d="M14 14H21V21H14V14Z"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                    <path
                      d="M3 14H10V21H3V14Z"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                  <path
                    d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <text
              class="t-segmented__item-label"
            >
              category
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-user"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="user"
                >
                  <g
                    id="fill1"
                  >
                    <path
                      d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                      fill="transparent"
                    />
                    <path
                      d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                      fill="transparent"
                    />
                  </g>
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <text
              class="t-segmented__item-label"
            >
              mine
            </text>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Segmented > Segmented blockVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-7b7a58bb=""
>
  <div
    class="example-segmented"
    data-v-7b7a58bb=""
  >
    <div
      class="t-segmented t-segmented--block"
      data-v-7b7a58bb=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <text
              class="t-segmented__item-label"
            >
              home
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="app"
                >
                  <g
                    id="fill1"
                  >
                    <path
                      d="M3 3H10V10H3V3Z"
                      fill="transparent"
                    />
                    <path
                      d="M14 14H21V21H14V14Z"
                      fill="transparent"
                    />
                    <path
                      d="M3 14H10V21H3V14Z"
                      fill="transparent"
                    />
                  </g>
                  <path
                    d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M3 3H10V10H3V3Z"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                    <path
                      d="M14 14H21V21H14V14Z"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                    <path
                      d="M3 14H10V21H3V14Z"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                  <path
                    d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <text
              class="t-segmented__item-label"
            >
              category
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-user"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="user"
                >
                  <g
                    id="fill1"
                  >
                    <path
                      d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                      fill="transparent"
                    />
                    <path
                      d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                      fill="transparent"
                    />
                  </g>
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <text
              class="t-segmented__item-label"
            >
              mine
            </text>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Segmented > Segmented disabledVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-3ddafa08=""
>
  <div
    class="example-segmented"
    data-v-3ddafa08=""
  >
    <div
      class="t-segmented"
      data-v-3ddafa08=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active t-segmented__item--disabled"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              最近
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1 t-segmented__item--disabled"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              推荐
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2 t-segmented__item--disabled"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              热门
            </text>
          </div>
        </div>
        
      </div>
    </div>
  </div>
  <div
    class="example-segmented"
    data-v-3ddafa08=""
  >
    <div
      class="t-segmented"
      data-v-3ddafa08=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              周一
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              周二
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2 t-segmented__item--disabled"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              周三
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-3"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              周四
            </text>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-4 t-segmented__item--disabled"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <text
              class="t-segmented__item-label"
            >
              周五
            </text>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Segmented > Segmented mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Segmented 分段控制器
  </h1>
  <p
    class="summary"
  >
    用于切换不同的内容区域，一次只显示一个区域的内容。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
        data-v-2de7982e=""
      >
        <div
          class="example-segmented"
          data-v-2de7982e=""
        >
          <div
            class="t-segmented"
            data-v-2de7982e=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    选项一
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    选项二
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    选项三
                  </text>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <div
          class="example-segmented"
          data-v-2de7982e=""
        >
          <div
            class="t-segmented"
            data-v-2de7982e=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <text
                    class="t-segmented__item-label"
                  >
                    home
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-app"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="app"
                      >
                        <g
                          id="fill1"
                        >
                          <path
                            d="M3 3H10V10H3V3Z"
                            fill="transparent"
                          />
                          <path
                            d="M14 14H21V21H14V14Z"
                            fill="transparent"
                          />
                          <path
                            d="M3 14H10V21H3V14Z"
                            fill="transparent"
                          />
                        </g>
                        <path
                          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <g
                          id="stroke1"
                        >
                          <path
                            d="M3 3H10V10H3V3Z"
                            stroke="currentColor"
                            stroke-width="2"
                          />
                          <path
                            d="M14 14H21V21H14V14Z"
                            stroke="currentColor"
                            stroke-width="2"
                          />
                          <path
                            d="M3 14H10V21H3V14Z"
                            stroke="currentColor"
                            stroke-width="2"
                          />
                        </g>
                        <path
                          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <text
                    class="t-segmented__item-label"
                  >
                    category
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-user"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="user"
                      >
                        <g
                          id="fill1"
                        >
                          <path
                            d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                            fill="transparent"
                          />
                          <path
                            d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                            fill="transparent"
                          />
                        </g>
                        <g
                          id="stroke1"
                        >
                          <path
                            d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                            stroke="currentColor"
                            stroke-linecap="square"
                            stroke-width="2"
                          />
                          <path
                            d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                            stroke="currentColor"
                            stroke-linecap="square"
                            stroke-width="2"
                          />
                        </g>
                      </g>
                    </svg>
                  </span>
                  <text
                    class="t-segmented__item-label"
                  >
                    mine
                  </text>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自适应宽度
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
        data-v-7b7a58bb=""
      >
        <div
          class="example-segmented"
          data-v-7b7a58bb=""
        >
          <div
            class="t-segmented t-segmented--block"
            data-v-7b7a58bb=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <text
                    class="t-segmented__item-label"
                  >
                    home
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-app"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="app"
                      >
                        <g
                          id="fill1"
                        >
                          <path
                            d="M3 3H10V10H3V3Z"
                            fill="transparent"
                          />
                          <path
                            d="M14 14H21V21H14V14Z"
                            fill="transparent"
                          />
                          <path
                            d="M3 14H10V21H3V14Z"
                            fill="transparent"
                          />
                        </g>
                        <path
                          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <g
                          id="stroke1"
                        >
                          <path
                            d="M3 3H10V10H3V3Z"
                            stroke="currentColor"
                            stroke-width="2"
                          />
                          <path
                            d="M14 14H21V21H14V14Z"
                            stroke="currentColor"
                            stroke-width="2"
                          />
                          <path
                            d="M3 14H10V21H3V14Z"
                            stroke="currentColor"
                            stroke-width="2"
                          />
                        </g>
                        <path
                          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <text
                    class="t-segmented__item-label"
                  >
                    category
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-user"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="user"
                      >
                        <g
                          id="fill1"
                        >
                          <path
                            d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                            fill="transparent"
                          />
                          <path
                            d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                            fill="transparent"
                          />
                        </g>
                        <g
                          id="stroke1"
                        >
                          <path
                            d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                            stroke="currentColor"
                            stroke-linecap="square"
                            stroke-width="2"
                          />
                          <path
                            d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                            stroke="currentColor"
                            stroke-linecap="square"
                            stroke-width="2"
                          />
                        </g>
                      </g>
                    </svg>
                  </span>
                  <text
                    class="t-segmented__item-label"
                  >
                    mine
                  </text>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        控制器禁用态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
        data-v-3ddafa08=""
      >
        <div
          class="example-segmented"
          data-v-3ddafa08=""
        >
          <div
            class="t-segmented"
            data-v-3ddafa08=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active t-segmented__item--disabled"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    最近
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1 t-segmented__item--disabled"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    推荐
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2 t-segmented__item--disabled"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    热门
                  </text>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <div
          class="example-segmented"
          data-v-3ddafa08=""
        >
          <div
            class="t-segmented"
            data-v-3ddafa08=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    周一
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    周二
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2 t-segmented__item--disabled"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    周三
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-3"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    周四
                  </text>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-4 t-segmented__item--disabled"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <text
                    class="t-segmented__item-label"
                  >
                    周五
                  </text>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
